add ansible scala

--- a/ansible/ubuntu/roles/configs/templates/config.fish.j2
+++ b/ansible/ubuntu/roles/configs/templates/config.fish.j2
@@ -1,4 +1,5 @@
-set -x PATH /home/kerfume/.nix-profile/bin $PATH
+set -x PATH /home/{{ user }}/.nix-profile/bin $PATH
+set -x PATH /home/{{ user }}/scala/bin $PATH
 
 # tmux alias
 function tn
