--- a/ansible/ubuntu/roles/configs/templates/config.fish.j2
+++ b/ansible/ubuntu/roles/configs/templates/config.fish.j2
@@ -1,5 +1,24 @@
+set paths "$HOME/.nix-profile/bin"
+# disabled path
+# set paths "$HOME/.cargo/bin" "/usr/local/opt/texinfo/bin" "$HOME/.rbenv/bin" "/opt/flutter/bin" "$HOME/.pub-cache/bin" (go env GOPATH)"/bin" $paths
+
+for p in $paths
+  set -x PATH $p $PATH
+end
+
 set -x PATH /home/{{ user }}/.nix-profile/bin $PATH
 set -x PATH /home/{{ user }}/scala/bin $PATH
+
+function fish_prompt
+  set_color $fish_color_cwd
+  echo -n (prompt_pwd)
+  set_color normal
+  echo -n ' > '
+end
+
+function gbranch
+  git branch | grep $argv[1]
+end
 
 # tmux alias
 function tn
