--- a/ansible/nix/roles/configs/templates/config.fish.j2
+++ b/ansible/nix/roles/configs/templates/config.fish.j2
@@ -6,8 +6,9 @@ for p in $paths
   set -x PATH $p $PATH
 end
 
-set -x PATH /home/{{ user }}/.nix-profile/bin $PATH
-set -x PATH /home/{{ user }}/scala/bin $PATH
+# set -x PATH /home/{{ user }}/.nix-profile/bin $PATH
+# set -x PATH /home/{{ user }}/scala/bin $PATH
+set -x SSL_CERT_FILE "$HOME/.nix-profile/etc/ssl/certs/ca-bundle.crt"
 
 function fish_prompt
   set_color $fish_color_cwd
