--- a/ansible/roles/configs/templates/config.fish.j2
+++ b/ansible/roles/configs/templates/config.fish.j2
@@ -1,4 +1,4 @@
-set paths "$HOME/.nix-profile/bin" "$HOME/.global_node_modules/bin"
+set paths "$HOME/.nix-profile/bin" "$HOME/.global_node_modules/bin" "$HOME/.local/bin"
 # disabled path
 # set paths "$HOME/.cargo/bin" "/usr/local/opt/texinfo/bin" "$HOME/.rbenv/bin" "/opt/flutter/bin" "$HOME/.pub-cache/bin" (go env GOPATH)"/bin" $paths
 
@@ -9,6 +9,7 @@ end
 # set -x PATH /home/{{ user }}/.nix-profile/bin $PATH
 # set -x PATH /home/{{ user }}/scala/bin $PATH
 set -x SSL_CERT_FILE "$HOME/.nix-profile/etc/ssl/certs/ca-bundle.crt"
+set -x PYTHONPATH "$HOME/.local/lib/python3.7/site-packages/"
 
 function fish_prompt
   set_color $fish_color_cwd
@@ -36,4 +37,8 @@ end
 
 function em
   emacs -nw
+end
+
+function kube
+  kubectl $argv
 end
