--- a/ansible/roles/configs/templates/config.fish.j2
+++ b/ansible/roles/configs/templates/config.fish.j2
@@ -11,12 +11,13 @@ end
 set -x SSL_CERT_FILE "$HOME/.nix-profile/etc/ssl/certs/ca-bundle.crt"
 set -x PYTHONPATH "$HOME/.local/lib/python3.7/site-packages/"
 
-function fish_prompt
-  set_color $fish_color_cwd
-  echo -n (prompt_pwd)
-  set_color normal
-  echo -n ' > '
-end
+set -g theme_powerline_fonts no
+# function fish_prompt
+#   set_color $fish_color_cwd
+#   echo -n (prompt_pwd)
+#   set_color normal
+#   echo -n ' > '
+# end
 
 function gbranch
   git branch | grep $argv[1]
@@ -41,4 +42,31 @@ end
 
 function kube
   kubectl $argv
+end
+
+# bootstrap fisher
+if not functions -q fisher
+    set -q XDG_CONFIG_HOME; or set XDG_CONFIG_HOME ~/.config
+    curl https://git.io/fisher --create-dirs -sLo $XDG_CONFIG_HOME/fish/functions/fisher.fish
+    fish -c fisher
+end
+
+# ref http://ka2n.hatenablog.com/entry/2017/01/09/fish_shell%E3%81%A7z%E3%81%AE%E7%B5%90%E6%9E%9C%E3%82%92peco%E3%81%A3%E3%81%A6%E7%88%86%E9%80%9F%E3%81%A7%E3%83%87%E3%82%A3%E3%83%AC%E3%82%AF%E3%83%88%E3%83%AA%E7%A7%BB%E5%8B%95%E3%81%99%E3%82%8B
+function peco_z
+  set -l query (commandline)
+
+  if test -n $query
+    set peco_flags --query "$query"
+  end
+
+  z -l | peco $peco_flags | awk '{ print $2 }' | read recent
+  if [ $recent ]
+      cd $recent
+      commandline -r ''
+      commandline -f repaint
+  end
+end
+
+function fish_user_key_bindings
+  bind \cd peco_z
 end
