--- a/ansible/roles/configs/templates/config.fish.j2
+++ b/ansible/roles/configs/templates/config.fish.j2
@@ -44,6 +44,11 @@ function kube
   kubectl $argv
 end
 
+function cd
+  builtin cd $argv
+  ls
+end
+
 # bootstrap fisher
 if not functions -q fisher
     set -q XDG_CONFIG_HOME; or set XDG_CONFIG_HOME ~/.config
