--- a/ansible/roles/configs/templates/config.fish.j2
+++ b/ansible/roles/configs/templates/config.fish.j2
@@ -10,6 +10,7 @@ end
 # set -x PATH /home/{{ user }}/scala/bin $PATH
 set -x SSL_CERT_FILE "$HOME/.nix-profile/etc/ssl/certs/ca-bundle.crt"
 set -x PYTHONPATH "$HOME/.local/lib/python3.7/site-packages/"
+set -x SBT_OPTS "-Xmx5G -Xss2M"
 
 set -g theme_powerline_fonts no
 # function fish_prompt
