--- a/ansible/roles/configs/templates/config.fish.j2
+++ b/ansible/roles/configs/templates/config.fish.j2
@@ -80,3 +80,7 @@ end
 function fish_user_key_bindings
   bind \cd peco_z
 end
+
+function purec
+  spago build --purs-args "--censor-codes=ImplicitImport"
+end
